[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psvap"
version = "0.1.0"
description = "Particle Simulation Visualization & Analysis Package (PSVAP)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Group F", email = "noreply@example.com" },
]
dependencies = []

[project.urls]
Homepage = "https://example.com/psvap"

[tool.setuptools.packages.find]
where = [".."]
include = ["PSVAP", "PSVAP.*"]

